hphp/hack/test/typecheck/enum_class_label/memoized_no_such_class.php.rust_elab.exp
File "memoized_no_such_class.php", line 3, characters 13-23:
Unbound name: `NoSuchClass` (an object type) (Naming[2049])
